[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "boringavatars"
authors = [
    {name = "Federico Bond", email = "federicobond@gmail.com"},
]
description = ""
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "Jinja2>=3.0.0",
]

[project.optional-dependencies]
test = [
    "black==22.1.0",
    "check-manifest==0.48",
    "pre-commit==2.17.0",
    "pytest-cov==3.0.0",
    "pytest-runner",
    "pytest==7.1.0",
    "pytest-github-actions-annotate-failures",
]

[project.urls]
Documentation = "https://github.com/federicobond/boringavatars"
Source = "https://github.com/federicobond/boringavatars"
Tracker = "https://github.com/federicobond/boringavatars"

[tool.flit.module]
name = "boringavatars"

executionEnvironments = [
  { root = "src" }
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"
