[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "boringavatars"
authors = [
    {name = "Federico Bond", email = "federicobond@gmail.com"},
]
description = ""
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "Jinja2>=3.0.0",
]
source = ["."]

[project.optional-dependencies]
test = [
    "black==23.7.0",
    "check-manifest==0.48",
    "pre-commit==3.4.0",
]

[project.urls]
Documentation = "https://github.com/federicobond/boringavatars"
Source = "https://github.com/federicobond/boringavatars"
Tracker = "https://github.com/federicobond/boringavatars"

[tool.flit.module]
name = "boringavatars"

executionEnvironments = [
  { root = "src" }
]

[tool.ruff]
exclude = ["tests/snapshots"]

[tool.black]
exclude = "tests/snapshots"

executionEnvironments = [
  { root = "src" }
]

[[tool.mypy.overrides]]
module = 'snapshottest'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'jinja2'
ignore_missing_imports = true
